fix: square projects layout and fix hero name visibility on laptop screens

--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -1,6 +1,6 @@
 .project {
-	height: 500px;
-	width: 100%;
+	height: 400px;
+	width: 400px;
 	padding: 0;
 	display: flex;
 	flex-direction: column;
@@ -20,7 +20,7 @@
 
 .img_viewport {
 	width: 100%;
-	height: 320px;
+	height: 250px;
 	overflow-x: hidden;
 	overflow-y: auto;
 	border-bottom: 1px solid #ffffff;
@@ -48,7 +48,7 @@
 	flex-direction: column;
 	gap: 0.5rem;
 	width: 100%;
-	height: 180px;
+	height: 150px;
 	overflow: hidden;
 }
 
